// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggestion should render 1`] = `
<button
  class="suggestion"
>
  <span
    aria-label="ticket"
    class="icon fa fa-ticket"
  />
  Suggestion 1
</button>
`;

exports[`Suggestion should render strong-tags around found chars 1`] = `
<button
  class="suggestion"
>
  <span
    aria-label="ticket"
    class="icon fa fa-ticket"
  />
  <span>
    <strong>
      Sug
    </strong>
    gestion 2
  </span>
</button>
`;
